[gd_scene load_steps=7 format=3 uid="uid://cyvmb6qd5nir3"]

[ext_resource type="Script" uid="uid://cq6gt7qwf0j78" path="res://scripts/pause_menu.gd" id="1_n87rw"]
[ext_resource type="Texture2D" uid="uid://c3a1vycvqgluk" path="res://assets/images/W-Key.png" id="2_v4r4p"]
[ext_resource type="Texture2D" uid="uid://y6uf78emdgxs" path="res://assets/images/A-Key.png" id="3_1s2dm"]
[ext_resource type="Texture2D" uid="uid://cyrh24bx506ac" path="res://assets/images/S-Key.png" id="4_88e76"]
[ext_resource type="Texture2D" uid="uid://t0ctuws1yxmi" path="res://assets/images/D-Key.png" id="5_knqa7"]
[ext_resource type="Texture2D" uid="uid://wdwyn455s310" path="res://assets/images/E-Key.png" id="6_71k7c"]

[node name="PauseMenu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -211.5
offset_right = 375.0
offset_bottom = 211.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(375, 0)

[node name="PauseLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "MENU"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RESUME"

[node name="Restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "RESTART"

[node name="AudioContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="AudioVolume" type="Label" parent="VBoxContainer/AudioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "AUDIO VOLUME"
horizontal_alignment = 1

[node name="AudioSlider" type="HSlider" parent="VBoxContainer/AudioContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
value = 100.0

[node name="MouseContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="MouseSensitivity" type="Label" parent="VBoxContainer/MouseContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "MOUSE SENSITIVITY"
horizontal_alignment = 1

[node name="MouseSlider" type="HSlider" parent="VBoxContainer/MouseContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.01
max_value = 0.3
step = 0.005
value = 0.3

[node name="QuitToMenu" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MAIN MENU"

[node name="QuitToDesktop" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "QUIT GAME"

[node name="MenuBar" type="MenuBar" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -153.0
offset_bottom = -113.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="MenuBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -219.0
offset_top = -22.5
offset_right = -88.0
offset_bottom = 22.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Controls"

[node name="Label2" type="Label" parent="MenuBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -163.0
offset_top = 77.5
offset_right = -32.0
offset_bottom = 122.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Move"
horizontal_alignment = 2

[node name="Control" type="Control" parent="MenuBar"]
anchors_preset = 0
offset_left = -206.0
offset_top = 41.0
offset_right = 8.0
offset_bottom = 169.0

[node name="TextureRect" type="TextureRect" parent="MenuBar/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -44.0
offset_right = -116.0
offset_bottom = -4.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("2_v4r4p")
expand_mode = 1

[node name="TextureRect2" type="TextureRect" parent="MenuBar/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -198.0
offset_top = -1.0
offset_right = -158.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_1s2dm")
expand_mode = 1

[node name="TextureRect3" type="TextureRect" parent="MenuBar/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -1.0
offset_right = -116.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_88e76")
expand_mode = 1

[node name="TextureRect4" type="TextureRect" parent="MenuBar/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -1.0
offset_right = -74.0
offset_bottom = 39.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_knqa7")
expand_mode = 1

[node name="Label3" type="Label" parent="MenuBar"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -163.0
offset_top = 173.0
offset_right = -32.0
offset_bottom = 218.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Interact"
horizontal_alignment = 2

[node name="TextureRect" type="TextureRect" parent="MenuBar/Label3"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -25.5
offset_right = -116.0
offset_bottom = 14.5
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("6_71k7c")
expand_mode = 1

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToMenu" to="." method="_on_quit_to_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitToDesktop" to="." method="_on_quit_pressed"]
